2002-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-specfun.cc: Use F77_FUNC instead of F77_XFCN for calls to
	fortran code that should run fast enough that it is not worth all
	the setup costs of F77_XFCN.

	* Quad.cc (user_function): Surround body of function with
	BEGIN_INTERRUPT_WITH_EXCEPTIONS, END_INTERRUPT_WITH_EXCEPTIONS.
	* ODESSA.cc (odessa_f, odessa_j, odessa_b): Likewise.
	* NLEqn.cc (hybrd1_fcn, hybrj1_fcn): Likewise.
	* LSODE.cc (lsode_f, lsode_j): Likewise.
	* DASSL.cc (ddassl_f, ddassl_j): Likewise.
	* DASRT.cc (ddasrt_f, ddasrt_j, ddasrt_g): Likewise.
	* DASPK.cc (ddaspk_f, ddaspk_psol, ddaspk_j): Likewise.

2002-11-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-ieee.cc (octave_ieee_init): Check defined (__osf__) instead
	of ! defined (linux).

2002-11-09  Per Persson <persquare@mac.com>

	* oct-shlib.cc (octave_dyld_shlib): New class.
	(make_shlib): Instantiate octave_dyld_shlib.

2002-11-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CMatrix.cc, dMatrix.cc: Sprinkle with OCTAVE_QUIT.

	* ODESSA.cc (odessa_f, odessa_j, odessa_b): Abort on error.

	* Array.h: Include <cstddef> here.

2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASPK.cc (DASPK::do_integrate): Resize rwork and iwork before
	using them.  Accept inequality contraint option of 0.  Assign
	pabs_tol and prel_tol before calling DASPK.  Don't redeclare
	abs_tol and rel_tol.

	* cmd-edit.h (command_editor::filename_completion_desired): New
	static function.
	(command_editor::do_filename_completion_desired): New virtual function.
	* oct-rl-edit.c (octave_rl_filename_completion_desired): New function.
	* oct-rl-edit.h: Provide decl.

	* Array2.cc (Array2<T>::get_size): #define MALLOC_OVERHEAD to
	avoid OS X linker bug.
	* ArrayN.cc (ArrayN<T>::get_size): Likewise.

2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ODESFunc.h (ODESFunc::ODES_fsub, ODESFunc::ODES_bsub,
	ODESFunc::ODES_jsub): Reorder args for consistency with other
	solvers.
	* ODESSA.cc: Fix all callers.