@@ -1,3 +1,8 @@
+2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* oct-shlib.cc (octave_dlopen_shlib::open): Use RTLD_GLOBAL too.
+	From Remy Bruno <remy.bruno@libertysurf.fr>
+
 2002-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* lo-specfun.cc: Use F77_FUNC instead of F77_XFCN for calls to
